feat: 完成定點與機構管理的完整 CRUD 功能 (包含無縫新增、行內編輯與非同步刪除)

--- a/templates/base.html
+++ b/templates/base.html
@@ -264,6 +264,13 @@
                                     部門廢棄物資料表管理
                                 </button>
                             {% endif %}
+                            <!-- Location Management Page: For root & mod. -->
+                            {% if user_is_over_mod %}
+                            <button class="item" data-href="{% url 'dashboard:location_management' %}">
+                            <span class="ts-icon is-location-dot-icon"></span>
+                            定點機構管理
+                            </button>
+                            {% endif %}
                             <!-- Account Management Page: For root & mod. -->
                             {% if user_is_over_mod %}
                                 <button class="item" data-href="{% url 'account:manage' %}">
